BE: Get ranking route
