# backend/src/Components/Metrics/Rankings/infrastructure/data/in-memory/rankings.in-memory.repository.ts
@@ -16,7 +16,7 @@ export class RankingsInMemoryRepository implements RankingsRepository {
   get() {
     return Promise.resolve(
       Ranking.fromPrimitives({
-        rankingSlug: 'some-time-serie',
+        rankingSlug: 'some-ranking',
         rankingValueTitle: 'Title',
         category: 'products',
         data: [
